--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="eng">
+	<head>
+		<link rel="shortcut icon" type="x-icon" href="images/icon.png">
+		<link rel="stylesheet" type="text/css" href="styles/3-common.css">
+		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
+		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+	</head>
 	<body>
 		<header></header>
 		<footer>Best School</footer>
