--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+0-index.html<!DOCTYPE html>
 <html>
 	<head style="color:#FF0000;height:70px;width:70px;">
-		HEADER
 	</head>
 	<body>
-	</body>
-	<footer style="color:#00ff00;height:60px;width:100%;bottom:0;text-align:center;">
+		<header style="background-color: #FF0000; height: 70px; width: 70px"></header>
+		<footer style="backgroun-color: #00ff00; height: 60px;width:100%;bottom:0;text-align: center; line-height: 60px">
 		Best School
 	</footer>
+	</body>
 </html>
