--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,11 +1,11 @@
 0-index.html<!DOCTYPE html>
 <html>
-	<head style="color:#FF0000;height:70px;width:70px;">
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
 	</head>
-	<body>
-		<header style="background-color: #FF0000; height: 70px; width: 70px"></header>
-		<footer style="backgroun-color: #00ff00; height: 60px;width:100%;bottom:0;text-align: center; line-height: 60px">
-		Best School
-	</footer>
+	<body style="margin: 0; padding: 0;">
+		<header style="background-color: #FF0000; height: 70px; width: 100%"></header>
+		<footer style="background-color: #00FF00; height: 60px;width:100%;bottom:0; text-align: center; line-height: 60px; position: fixed;">Best School</footer>
 	</body>
 </html>
