--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<header></header>
+<html lang="en">
 	<head>
-<style>
-header {color:#FF0000;height:70px;width:100%}
-footer {color:#00FF00;height:60px;width:100%;text-align:center;bottom:0;}
-</style>
+		<title>AirBnB clone</title>
+		<style>
+header {background-color: #FF0000; height: 70px; width: 100%}
+footer {background-color: #00FF00; height: 60px; width: 100%; text-align: center; bottom: 0; position: fixed; line-height: 60px;}
+		</style>
 	</head>
-	<body>
-	</body>
+	<body style="margin: 0; padding: 0;">
 	<footer>Best School</footer>
+	</body>
 </html>
